<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auteurs et œuvres</string>

    <string name="menu_about">À propos</string>

    <string name="search_hint">Rechercher un auteur, une œuvre ou une organisation</string>
    <string name="no_result">Aucun résultat.</string>
    <string name="image_description">Illustration</string>
    <string name="query_too_short">Votre requête doit comporter au moins 3 caractères.</string>
    <string name="retry">Réessayer</string>

    <string name="instructions">Recherchez un auteur, une œuvre ou une organisation en cliquant sur la loupe en haut à droite.</string>

    <string name="changelog_dialog_title">Quoi de neuf ?</string>
    <string name="changelog_dialog_button_label">OK</string>

    <string name="db_installation_title">Finalisation de l’installation</string>
    <string name="db_installation_wait">Veuillez patienter…</string>
    <string name="db_installation_uncompress">Décompression de la base de suggestions…</string>
    <string name="db_installation_percentage">0</string>
    <string name="db_installation_percent_sign">%</string>

    <string name="insufficient_free_space_header">ESPACE DISQUE DISPONIBLE INSUFFISANT</string>
    <string name="insufficient_free_space_explanation1">&lt;i>Auteurs et œuvres&lt;/i> a besoin d’un peu d’espace disque pour finaliser son installation. Essayez de désinstaller quelques applications pour libérer &lt;b>%1$s&lt;/b> d’espace.</string>
    <string name="insufficient_free_space_explanation2">La finalisation de l’installation débutera automatiquement dès que l’espace disque nécessaire sera disponible.</string>
    <string name="insufficient_free_space_still">Espace disque disponible toujours insuffisant</string>

    <string name="unit_mb">&#8201;Mo</string>
    <string name="unit_kb">&#8201;ko</string>

    <string name="about_version">Version 2.0 — 22/07/2013</string>
    <string name="about_generalities_1"><i>Auteurs et œuvres</i> permet de consulter des fiches sur un grand nombre d’auteurs, d’œuvres et d’organisations.</string>
    <string name="about_generalities_2">Les fiches sont composées avec les données ouvertes que la Bibliothèque nationale de France met à disposition sur <a href="http://data.bnf.fr">data.bnf.fr</a>.</string>
    <string name="about_source_code">Le code source de cette application est disponible sur <a href="http://github.com/ggounot/BnfData">GitHub</a>.</string>
    <string name="about_changelog">Journal des modifications</string>

    <string name="errmsg_no_network_connection">Vous n’êtes pas connecté à Internet.</string>
    <string name="errmsg_data_retrieval_failed">Une erreur s’est produite lors de la récupération des données.</string>

    <string name="title_activity_searchable">Résultats de la recherche</string>
    <string name="title_activity_view_author">Auteur</string>
    <string name="title_activity_view_organization">Organisation</string>
    <string name="title_activity_view_work">Œuvre</string>
    <string name="title_activity_about">À propos d’Auteurs et œuvres</string>

    <string name="informations_header">INFORMATIONS</string>
    <string name="works_header">ŒUVRES LES PLUS ÉTUDIÉES</string>
    <string name="contributors_header">CONTRIBUTEURS</string>
    <string name="generalities_header">GÉNÉRALITÉS</string>
    <string name="source_code_header">CODE SOURCE</string>
    <string name="changelog_header">MODIFICATIONS</string>

    <string name="birthdate_label">Naissance</string>
    <string name="deathdate_label">Décès</string>
    <string name="language_label">Langue</string>
    <string name="country_label">Pays</string>
    <string name="gender_label">Sexe</string>
    <string name="fields_of_activity_label">Domaines</string>
    <string name="alt_forms_label">Autres formes</string>
    <string name="editorial_notes_label">Sources</string>
    <string name="external_links_label">Liens externes</string>
    <string name="date_label">Date</string>
    <string name="description_label">Description</string>
    <string name="subjects_label">Domaines</string>
    <string name="creation_date_label">Création</string>
    <string name="termination_date_label">Fin d’activité</string>
    <string name="home_page_label">Site web</string>
    <string name="history_label">Histoire</string>

    <string name="catalogue_link_text">Catalogue BnF</string>
    <string name="wikipedia_link_text">Wikipédia</string>

    <string name="startdate_label">Création</string>
    <string name="stopdate_label">Fin d’activité</string>
    <string name="notes_label">Notes</string>

</resources>
