<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbarStyle="outsideOverlay" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

		<TextView
		    android:id="@+id/appName"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:drawablePadding="8dp"
		    android:drawableTop="@drawable/ic_launcher"
		    android:text="@string/app_name"
		    android:textStyle="bold" />

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:text="@string/about_version"
		    android:textStyle="bold" />

        <TextView
            style="@style/section_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generalities_header" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_generalities_1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/generalities_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/about_generalities_2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            style="@style/section_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_code_header" />

        <TextView
            android:id="@+id/source_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_source_code"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            style="@style/section_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changelog_header" />

        <TextView
            android:id="@+id/changelog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_changelog"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</ScrollView>