<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:columnCount="3" >

    <ProgressBar
        android:id="@+id/image_progress_bar"
        android:layout_width="@dimen/object_image_container_width"
        android:layout_height="@dimen/object_image_container_height"
        app:layout_column="0"
        app:layout_row="0"
        app:layout_rowSpan="2" />

    <FrameLayout
        android:layout_width="@dimen/object_image_container_width"
        android:layout_height="@dimen/object_image_container_height"
        app:layout_column="0"
        app:layout_row="0"
        app:layout_rowSpan="2" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/image_border"
            android:contentDescription="@string/image_description" />
    </FrameLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        app:layout_columnSpan="2"
        app:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?android:attr/textColorPrimary"
        android:textIsSelectable="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dates"
        android:layout_width="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        app:layout_columnSpan="2"
        app:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?android:attr/textColorSecondary"
        android:textIsSelectable="true"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/informations_header"
        style="@style/section_header"
        android:layout_width="0dp"
        app:layout_columnSpan="3"
        app:layout_gravity="fill_horizontal"
        android:text="@string/informations_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/birthdate_label"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_columnSpan="2"
        android:text="@string/birthdate_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/birthdate"
        android:layout_width="0dp"
        app:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorSecondary"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/deathdate_label"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_columnSpan="2"
        android:text="@string/deathdate_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/deathdate"
        android:layout_width="0dp"
        app:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorSecondary"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/nationalities_label"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_columnSpan="2"
        android:text="@string/nationalities_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/nationalities"
        android:layout_width="0dp"
        app:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorSecondary"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/notes_label"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_columnSpan="2"
        android:text="@string/notes_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/notes"
        android:layout_width="0dp"
        app:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorSecondary"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/works_header"
        style="@style/section_header"
        android:layout_width="0dp"
        app:layout_columnSpan="3"
        app:layout_gravity="fill_horizontal"
        android:text="@string/works_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</android.support.v7.widget.GridLayout>